initial content of evaluation chapter

--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -81,7 +81,11 @@
 	
 	\bibitem{expandquasiexpdesign} D.T. Campbell \& J.C. Stanley, {\em Experimental and quasi-experimental designs for research }, In N. L. Gage (Ed.), Handbook of research on teaching. Chicago: Rand McNally, 1963.
 	
-	\bibitem{anovapreposttest} S.W. Huck \& R.A. McLean, Using a Repeated Measures ANOVA to Analyze the Data from a Pretest-Posttest Design: A Potentially Confusing Task, Psychological Bulletin. vol. 82, No. 4, pages 511-518, 1975. 
+	\bibitem{anovapreposttest} S.W. Huck \& R.A. McLean, {\em Using a Repeated Measures ANOVA to Analyze the Data from a Pretest-Posttest Design: A Potentially Confusing Task }, Psychological Bulletin, vol. 82, No. 4, pages 511-518, 1975. 
+	
+	\bibitem{validitythreatsinse} R. Feldt \& A. Magazinius, {\em Validity Threats in Empirical Software Engineering Research - An Initial Survey } , In Proc. of the Int'l Conf. on Software Engineering and Knowledge Engineering, issue March, pages 374-379, 2010.
+	
+	\bibitem{expinse} C. Wohlin, M. Höst, P. Runeson, M. Ohlsson, B. Regnell, and A. Wesslen, {\em Experimentation in software engineering: an introduction }, Kluwer Academic Publishers, 2000.
 	
 	
 \end{thebibliography}
