--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -1,5 +1,5 @@
 \section{Design}\label{sec:design}
-In this chapter, I am going to describe the design steps realized during the implementation of the demonstrator. Section \ref{subsec:exampleforimplementation} describes all the examples that I have conceptualized before choosing the final one for the implementation. This is then followed by the description of the steps taken for selecting the bx-tool in Section \ref{subsec:bxtoolselection}. Afterwards, Section \ref{subsec:architecturedesign} deals with the decisions taken for finalizing the apllication's architecture design. Then, Section \ref{subsec:design_layers} describes the applications' framework in detail along with its components. Afterwards, Section \ref{subsec:designchallenges} describes the challenges that I faced while designing the entire framework and its components. At last, Section \ref{subsec:choicesthreats} describes some of the choices that I made during the design phase and its associated threats. 
+In this chapter, I am going to describe the design steps realized during the implementation of the demonstrator. Section \ref{subsec:exampleforimplementation} describes all the examples that I have conceptualized before choosing the final one for the implementation. This is then followed by the description of the steps taken for selecting the bx-tool in Section \ref{subsec:bxtoolselection}. Afterwards, Section \ref{subsec:architecturedesign} deals with the decisions taken for finalizing the application's architecture design. Then, Section \ref{subsec:design_layers} describes the application's framework in detail along with its components. Afterwards, Section \ref{subsec:designchallenges} describes the challenges that I faced while designing the entire framework and its components. At last, Section \ref{subsec:choicesthreats} describes some of the choices that I made during the design phase and its associated threats. 
 
 \subsection{Choosing an Example}\label{subsec:exampleforimplementation}
 To solve the problems as described in Section \ref{subsec:probstmt}, the main idea is to design and implement an interactive bx tool demonstrator based on an intuitive example.
@@ -7,7 +7,7 @@ To solve the problems as described in Section \ref{subsec:probstmt}, the main id
 \subsubsection{Construction}\label{subsubsec:exampleconstruction}
 I have constructed a few examples for implementation as follows:
 
-\paragraph{Task Management} This prototype can be used for allocating tasks in a team. It contains two views e.g., supervisor's view and employee's view. A Supervisor can allocate tasks to their subordinates. An employee can view the tasks assigned to him. Then the task will go through a life cycle as the work progresses, i.e., Assigned, In Progress, Testing, Done. Supervisor's view shows aggregate information from multiple projects and multiple employees, but does not contain detailed information, e.g., tasks have fewer states than for assigned employees. Bx rules control how updates are handled and states are reflected in the different views of the project, e.g., the employee's view will be updated for each state change, whereas the supervisor's view is only updated when a task is completed and not for intermediate changes.
+\paragraph{Task Management} This prototype can be used for allocating tasks in a team. It contains two views e.g., supervisor's view and employee's view. A supervisor can allocate tasks to their subordinates. An employee can view the tasks assigned to him. Then the task will go through a life cycle as the work progresses, i.e., Assigned, In Progress, Testing, Done. Supervisor's view shows aggregate information from multiple projects and multiple employees, but does not contain detailed information, e.g., tasks have fewer states than for assigned employees. Bx rules control how updates are handled and states are reflected in the different views of the project, e.g., the employee's view will be updated for each state change, whereas the supervisor's view is only updated when a task is completed and not for intermediate changes.
 
 \paragraph{Quiz} This prototype can be used for an online quiz game. It contains two views e.g., administrator's view and participant's view.
 There will be a large set of questions related to different areas, e.g, history, geography, politics, sports, etc. The administrator can select the areas from which the questions will be shown to the participant and initiate the game. The participant can override the selection of the areas and start the quiz. Randomly questions will be shown to the participant from the selected areas with 4 options. The administrator's view contains less information than the participant's view, e.g., only the result of each question will be shown to the administrator, whereas participant can see questions along with its options. As soon as the participant chooses the answer to any question, bx rules control how updates are handled and states are reflected in the different views of the project.
@@ -18,41 +18,64 @@ There will be a large set of questions related to different areas, e.g, history,
 It contains two views e.g., low-level view (depicts a grid structure containing blocks) and high-level view (empty space which depicts UI for kitchen). High-level view has more functionalities such as creating/ deleting/ moving an kitchen item, etc. out of which only a few will be available in low-level view. User will create/ delete/ move a kitchen item, i.e., sink / table on the high-level view and if changes done on the high-level view are according to the rules defined in the bx tool then items will be reflected on the low-level view with same colored blocks and vice-versa. Basically the transformation will happen between a low-level language and a high-level language and bx rules control how updates are handled and states are reflected in the different views of the project.
 
 \paragraph{Person and Family}
-It contains two views e.g., Family view and Person view. In Family view, it contains many families and each family consist of members. Whereas, Person view contains persons (the members of each family). We assume that the surnames are unique and allow us to differentiate between different families. Addition of a new person to the Person view will be reflected on the family view and vice-versa. Also, due to the uniqueness of the surnames, person created will be automatically assigned to the related family. Bx rules control how updates are handled and states are reflected in the different views.
+The concept of this example is taken from the example \emph{FamilyToPersons} located in the bx examples repository~\cite{bx-examples}. It contains two views e.g., Family view and Person view. In Family view, it contains many families and each family consist of members. Whereas, Person view contains persons (the members of each family). We assume that the surnames are unique and allow us to differentiate between different families. Addition of a new person to the Person view will be reflected on the family view and vice-versa. Also, due to the uniqueness of the surnames, person created will be automatically assigned to the related family. Bx rules control how updates are handled and states are reflected in the different views.
 
 \subsubsection{Selection}\label{subsubsec:exampleselection}
-Selecting an example to implement through the demonstrator was not random, rather I have taken many factors into considerations before choosing the final one. It was a very important decision, as selection of the example and its implemenation will directly effect the research questions \textit{RQ2}, \textit{RQ4.2}, \textit{RQ6} described in Section \ref{subsec:contribution} and requirements \textit{FREQ2}, \textit{FREQ3} described in Section \ref{subsec:functionalreq}.
-\newline\newline Hence by taking into account all these factors, I have finally chosen the \textit{Arranging a Kitchen} example to be implemented by the demonstrator as a part of my research. Following were the driving factors for the selection of the example:
-\begin{itemize}
-	\item {any user can relate to the example very well as everybody is familiar with a kitchen and its environment.}
-	\item {example is very simple and no technical details are involved.}
-	\item {interactivity and rules won't be a overhead for the user, rather intuitive.}
-	\item {associted scenarios are part of day to day life, so user will be able to relate to the learning concepts through the example.}
-\end{itemize}
+Selecting an example for the demonstrator was not random, rather I have taken many factors into considerations before choosing the final one. It was a very important decision, as selection of the example and its implemenation will directly effect the research question \textit{RQ 4} specified in Section \ref{subsec:probstmt} and requirements \textit{NR 2}, \textit{NR 3} described in Section \ref{subsec:nonfunctionalreq}.
+
+Hence by taking into account all these factors, I have constructed a few evaluation criterias (referred to as \textbf{EC}) for the selection process of the most suitable example as listed below:
+\begin{description}
+	\item [EC 1:] User should be familiar with the example.
+	\item [EC 2:] Example should be simple without the involvement of any technical details.
+	\item [EC 3:] Interactivity should not create a overhead for the user but rather be intuitive.
+	\item [EC 4:] User should be able to relate to the learning concepts through the example.
+\end{description}
+
+Table~\ref{tab:comparison_examples} shows the comparison of the examples based on the evaluation criterias. "\checkmark" denotes the fulfillment of the evaluation criteria whereas, "\ding{55}" denotes the non-fulfillment of the evaluation criteria. This comparison table clearly shows that \textit{Arranging a Kitchen} is the most suitable example. It fulfills all the evaluation criterias because any user can relate to the example very well as everybody is familiar with a kitchen and its environment, example is very simple and no technical details are involved, interactivity and rules won't be a overhead for the user as the environment is a part of day to day life and hence user will be able to relate to the learning concepts through the example. So, I have finally chosen this example for the demonstrator and also as part of my research.
+
+\begin{table}
+	\centering
+	\begin{tabular}{|lcccc|}
+		\hline
+		\textbf{} & \multicolumn{4}{c|}{\textbf{Evaluation Criterias}} \\
+		\textbf{Examples} & \textbf{EC1} & \textbf{EC2} & \textbf{EC3} & \textbf{EC4} \\
+		\hline
+		\hline
+		Task Management & \ding{55} & \ding{55} & \checkmark & \checkmark \\ 
+		\hline
+		Quiz & \checkmark & \ding{55} & \checkmark & \checkmark \\
+		\hline
+		Playing with Shapes & \ding{55} & \ding{55} & \checkmark & \checkmark \\
+		\hline
+		Person and Family & \checkmark & \checkmark & \ding{55} & \checkmark \\
+		\hline
+		Arranging a Kitchen & \checkmark &  \checkmark & \checkmark & \checkmark \\
+		\hline
+	\end{tabular}
+	\caption{Comparison of examples based on evaluation criterias}
+	\label{tab:comparison_examples}
+\end{table}
 
 \subsection{BX Tool Selection}\label{subsec:bxtoolselection}
 Next step in the design process was selection of a bx tool which takes care of the bx part of the demonstrator and upon which the entire framework of the demonstrator will be constructed. My gathered information during the case study phase led the foundation for the selection process.
-\subsubsection{Theory}\label{subsubsec:bxtooltheory}
-I further investigated on the existing bx tools from the point of view of practical application and usage of these tools in terms of building softwares. Even after a significant amount of work has been done by developers community and bx community, the main problems are still revolving around below points \cite{bx-theoryandappl}: 
-\begin{itemize}
-	\item {the conceptual or theoretical challenges, practical challenges associated with using bx, and tool/technology challenges involved with building software systems that supported or exploited bx.}
-	\item {limited benchmarks for comparison of complete bx solutions.}
-	\item {no common repository of bx scenarios or problems that can be used to test and evaluate bx solutions.}
-	\item {there exists tools to support particular bx scenarios but with very limited interoperability and integration.}
-\end{itemize}
-To focus particularly on the above issues, bx-community had conducted a series of technical workshops at relevant conferences and organised week-long intensive research seminars in the year 2013 before the \textit{BX 2014} workshop \cite{bx-theoryandappl}. Some of the main outcome of these seminars are listed below:
+
+\subsubsection{Case Study}\label{subsubsec:bxtoolcasestudy}
+I further investigated on the existing bx tools from the point of view of practical application and usage of these tools in terms of building softwares. Even after a significant amount of work has been done by developers community and bx community, the main problems were revolving around the conceptual, practical challenges associated with using bx, and tool/technology in building software systems and absence of benchmarks for comparison of complete bx solutions~\cite{bx-theoryandappl}.
+
+To focus particularly on these issues, bx-community had conducted a series of technical workshops at relevant conferences and organised week-long intensive research seminars~\cite{bx-theoryandappl}. Some of the main outcome of these seminars are listed below:
 \begin{itemize}
 	\item {focus on the need of benchmarks and further categorizing them into functional and non-functional ones.}
-	\item {scenarios for bx were developed based on database, synchronization, model-view architecture etc.}
 	\item {software tool support for bx was shown in terms of demos which includes tool like eMoflon, Echo etc.}
 \end{itemize}
+
 \subsubsection{Selection}\label{subsubsec:bxtoolselection}
-Again, it was a very important decision, as selection of the bx tool and the implemenation on the top of it will directly effect the research questions \textit{RQ1}, \textit{RQ4.1} described in Section \ref{subsec:contribution} and requirements \textit{FREQ1} described in Section \ref{subsec:functionalreq}.
-\newline\newline The outcome of the seminars as discussed in previous section \ref{subsubsec:bxtooltheory} led me to concentrate and analyze the bx tools like eMoflon, Echo, BIGUL. Also, I came across the benchmark \cite{benchmarx} \cite{benchmarx-reload}, the first non-trivial benchmark where Anjorin et al. has provided a practical framework to compare and evaluate three bx tools. After analyzing these tools, benchmarks and taking into consideration the reserach questions and requiements, I have finally chosen \textit{eMoflon} as the bx tool to handle the bx part of my demonstrator. Following were the driving factors for the selection of the bx tool:
+Again, it was a very important decision, as selection of the bx tool and the implemenation on the top of it will directly effect the research questions \textit{RQ 1}, \textit{RQ 2}  specified in Section \ref{subsec:probstmt}.
+
+The outcome of the seminars as discussed in previous section \ref{subsubsec:bxtooltheory} led me to concentrate and analyze the bx tools like eMoflon, Echo, BIGUL. Also, I came across the benchmark \cite{benchmarx} \cite{benchmarx-reload}, the first non-trivial benchmark where Anjorin et al. has provided a practical framework to compare and evaluate three bx tools. After analyzing these tools, benchmarks and taking into consideration the reserach questions and requiements, I have finally chosen \textit{eMoflon} as the bx tool to handle the bx part of the demonstrator. Following were the driving factors for the selection of the bx tool:
 \begin{itemize}
 	\item {sample implementation with framework to implement the eMoflon tool was already available.}
-	\item {my supervisor/prof. is a core member of the eMoflon community which gave me added advantage of knowing the tool inside out.}
-	\item {extra knowledge about the tool can be really handy and it actually helped me in solving the implemenation issues/challenges regarding the tool as described in Section\ref{subsec:implchallenges}.}
+	\item {my supervisor/prof. is a core member of the eMoflon developer team which gave me added advantage of knowing the tool inside out. This extra knowledge actually helped me in solving the implemenation issues/challenges related to the tool.}
+	\item {eMoflon is Java based and was thus easier for me to integrate and work with, compared to BiGUL (Haskell-based).}
 \end{itemize}
 
 \subsubsection{Benchmarx}\label{subsubsec:benchmarx}
