--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -111,7 +111,6 @@
 	\setcounter{page}{1}
 	\pagenumbering{Roman}
 	{
-		%then: create a bastard title
 		\thispagestyle{empty}
 		\begin{center}
 			{\vspace*{170pt}\Large\textbf{A Demonstrator Framework for\\[5pt] 
@@ -120,7 +119,13 @@
 			{\large Arjya Shankar Mishra}
 		\end{center}
 		\clearpage
-	}            
+		
+		\thispagestyle{empty}          
+		\begin{center}
+				
+		\end{center}
+		\clearpage
+	}  
 
 	\begin{titlepage}
 	\thispagestyle{empty}
