--- a/Final Documentation/Summary/Summary.tex
+++ b/Final Documentation/Summary/Summary.tex
@@ -2,11 +2,13 @@
 \subsection{Conclusion}\label{subsec:conclusion}
 Finding the limitations of the tool, benchmarx.
 \subsection{Future Work}\label{subsec:futurework}
-1. New examples
-2. New Rulesets
-3. Another tool
-4. Tool as a webservice
-5. New experiment -- only showing a video to the control grp
+In this thesis, I have designed an application framework for the bx tool demonstrator, implemented the demonstrator based on a concrete example, and further evaluated the demonstrator to check its effectiveness in order to spread the bx concepts to a wide spread audience to the best of my knowledge and belief. However, I could not realize a few other features due to time constraints. In the following paragraphs, I discuss some enhancements that I would like to apply to my work in the future. 
+\paragraph{New Rulesets}
+\paragraph{New Examples} I have implemented one example in the demonstrator. However, it would be fascinating to see the implementation of a few more examples on the same or different UI platform but on the top of the same application framework.
+\paragraph{Another BX tool}
+\paragraph{BX Tool as a webservice}
+\paragraph{New experiment}
+only showing a video to the control grp
 
 
 
